--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,15 @@
         android:layout_toRightOf="@+id/button"
         android:layout_toEndOf="@+id/button" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Take Off."
+        android:id="@+id/button4"
+        android:layout_alignBottom="@+id/angleLabel"
+        android:layout_alignRight="@+id/button3"
+        android:layout_alignEnd="@+id/button3" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -94,5 +103,26 @@
         android:layout_alignEnd="@+id/button2"
         android:layout_toRightOf="@+id/button3"
         android:layout_toEndOf="@+id/button3" />
+
+    <TextView
+        android:id="@+id/angleLabel"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Wall Angle: "
+        android:layout_below="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/angleText"
+        android:layout_below="@+id/textView"
+        android:layout_alignRight="@+id/angleLabel"
+        android:layout_alignEnd="@+id/angleLabel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="0"
+        android:layout_above="@+id/textView3"
+        android:layout_toEndOf="@+id/textView2" />
 
 </RelativeLayout>
